AC_INIT(configure.in)
AC_CONFIG_AUX_DIR(config)

AM_CONFIG_HEADER(include/config.h)
AM_INIT_AUTOMAKE(libmpcs, 0.1)

AC_LANG_C
AC_PROG_CC
AM_PROG_LIBTOOL

AC_CHECK_HEADERS(replaygain/gain_analysis.h)

AC_CANONICAL_HOST()
case $host_os in
	*mingw32* )
		LDFLAGS="${LDFLAGS} -mwindows"
		EXTRALIBS="-lwinmm"
		;;
	*psp* )
		CFLAGS="-G0 -O2 -I $(pspsdk -p)/include"
		;;
	* )
		EXTRALIBS=""
		;;
esac

AC_SUBST([EXTRALIBS])

AC_OUTPUT(Makefile include/Makefile libmpcdec/Makefile libmpcenc/Makefile \
	libmpcpsy/Makefile libwavformat/Makefile mpc2sv8/Makefile mpcchap/Makefile mpccut/Makefile \
	mpcdec/Makefile mpcenc/Makefile mpcgain/Makefile wavcmp/Makefile)
